GPTEINFRA-7693 Update handlers
* Add new endpoints and patch existing handlers.
* Update functional tests
* Update OpenAPI schema
